# psoc6-pdm-zephyr

./: .gitignore  CMakeLists.txt  HARDWARE.md  LICENSE  README.md  prj.conf  west.yml
app/: CMakeLists.txt
app/src/acoustic/: acoustic.c  psoc6_pdm.c
boards/: cy8ckit_062s2_ai.overlay
src/: main.c
src/acoustic/: acoustic.h  psoc6_pdm.c  psoc6_pdm.h
